Add input folder and .ipynb
Input data is unique for each participant, notebooks are tracked through
jupytext conversion.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Don't add input data
+data/
+
+# Don't add notebooks (use jupytext representation)
+.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
